fix xscript action alignment

--- a/app/stylesheets/partials/_record.scss
+++ b/app/stylesheets/partials/_record.scss
@@ -114,6 +114,7 @@
        h2 {
          @include column(2.5);
          text-transform: uppercase;
+         line-height: 35px;
        }
 
        .sync {
@@ -132,6 +133,7 @@
        .datastream-actions {
           @include column(7.25, true);
           @include margin-trailer(0.5);
+          line-height:35px;
          .print {
             @include column(2.5);
             text-align: right;
@@ -349,7 +351,7 @@
 }
 
 .at300bs {
-display: none !important;
+  display: none !important;
   background: none;
   height: 0px;
   width: 0px;
